# left-cmake

./: .gitignore
P2P/: CMakeLists.txt  config.ini
P2P/include/CompleteConfidence/: WebSocket.cpp  sha1.cpp
P2P/include/LeftMyCodes/: LeftDefs.h  MyCodes.h
P2P/src/: GlobalInfo.cpp  GlobalInfo.h  P2P.cpp  P2PClient.cpp  P2PServer.cpp  P2PUtil.cpp  P2PUtil.h  PublicNetWorkServer.cpp
P2P/src/CompleteConfidence/: WebSocket.cpp  base64.cpp  sha1.cpp
P2P/src/LeftMyCodes/: MyCodes.cpp
P2P/src/easylogging/: easylogging++.cc
TCPTest/: CMakeLists.txt
TCPTest/P2P/include/CompleteConfidence/: Socket.h  WebSocket.h  base64.cpp  sha1.h
TCPTest/P2P/include/LeftMyCodes/: MyCodes.cpp
TCPTest/P2P/src/: P2P.cpp  P2PClient.h  P2PServer.h  P2PUtil.h  PublicNetWorkServer.cpp  PublicNetWorkServer.h
TCPTest/include/CompleteConfidence/: CCDefs.h  WebSocket.cpp  sha1.cpp
TCPTest/include/LeftMyCodes/: LeftDefs.h  MyCodes.cpp  MyCodes.h
TCPTest/src/: TCPTest.cpp
TCPTest/src/CompleteConfidence/: WebSocket.h  base64.cpp
